@@ -1,3 +1,8 @@
+2010-02-22 S. Thiell <stephane.thiell@cea.fr>
+
+    * NodeSet.py: NodeSet constructor now raises a NodeSetParseError
+	exception when unsupported type is used as input (trac ticket #53).
+
 2010-02-21 S. Thiell <stephane.thiell@cea.fr>
 
     * Task.py: Fix a deadlock when a task is resumed two times from another
